fix:把預處理04變成 分析01

--- a/03_TicketAnalysisCode.ipynb
+++ b/03_TicketAnalysisCode.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "51662c73",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "873ae102",
    "metadata": {},
    "outputs": [],
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "c1428724",
    "metadata": {},
    "outputs": [],
@@ -459,12 +459,13 @@
     "selecttime_ticket_folder = create_folder(os.path.join(os.getcwd(), '..', '01_初步篩選整理票證', '01_指定時間區間票證資料')) # 建立01-01 指定時間區間票證資料夾\n",
     "checkok_ticketfolder = create_folder(os.path.join(os.getcwd(), '..', '01_初步篩選整理票證', '02_過濾可用票證資料')) # 建立01-02 過濾可用票證資料夾\n",
     "check_stopfolder = create_folder(os.path.join(os.getcwd(), '..', '01_初步篩選整理票證', '03_所有使用到的點位')) # 建立01-03 所有使用到的點位資料夾\n",
-    "firstcount_folder = create_folder(os.path.join(os.getcwd(), '..', '01_初步篩選整理票證', '04_分時計次')) # 建立01-03 所有使用到的點位資料夾\n"
+    "hourlycount_folder = create_folder(os.path.join(os.getcwd(), '..', '02_初步分析', '01_分時計次')) # 建立01-03 所有使用到的點位資料夾\n",
+    "dailybetweenstops_folder = create_folder(os.path.join(os.getcwd(), '..', '02_初步分析', '02_全日站間量'))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "4b02f38d",
    "metadata": {},
    "outputs": [],
@@ -542,24 +543,7 @@
    "execution_count": null,
    "id": "b3d92724",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "=== 開始處理：d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\TicketAnalysis\\01_初步篩選整理票證\\01_指定時間區間票證資料\\公路客運電子票證資料(TO1A)_2024-10-01_to_2024-11-30.csv ===\n",
-      "TXT (CSV 格式) 已輸出：d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\TicketAnalysis\\01_初步篩選整理票證\\02_過濾可用票證資料\\客運票證資料正確率記錄.txt\n",
-      "清洗後資料輸出：d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\TicketAnalysis\\01_初步篩選整理票證\\02_過濾可用票證資料\\公路客運電子票證資料(TO1A)_2024-10-01_to_2024-11-30_cleaned.csv\n",
-      "\n",
-      "=== 開始處理：d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\TicketAnalysis\\01_初步篩選整理票證\\01_指定時間區間票證資料\\新北市公車電子票證資料(TO1A)_2024-10-01_to_2024-11-30.csv ===\n",
-      "TXT (CSV 格式) 已輸出：d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\TicketAnalysis\\01_初步篩選整理票證\\02_過濾可用票證資料\\客運票證資料正確率記錄.txt\n",
-      "清洗後資料輸出：d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\TicketAnalysis\\01_初步篩選整理票證\\02_過濾可用票證資料\\新北市公車電子票證資料(TO1A)_2024-10-01_to_2024-11-30_cleaned.csv\n",
-      "\n",
-      "=== 開始處理：d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\TicketAnalysis\\01_初步篩選整理票證\\01_指定時間區間票證資料\\桃園市公車電子票證資料(TO1A)_2024-10-01_to_2024-11-30.csv ===\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 預處理02: 指定時間區間票證資料切分\n",
     "def pre02_get_correct_tickets(selecttime_ticket_folder, checkok_ticketfolder):\n",
@@ -650,7 +634,7 @@
     "    stop = get_stop_fromtickets(df)\n",
     "    stop['file_source'] = os.path.basename(file)\n",
     "\n",
-    "    outputfilename = os.path.join(check_stopfolder, os.path.basename(file).replace('.csv', '_stops.csv'))\n",
+    "    outputfilename = os.path.join(check_stopfolder, os.path.basename(file).replace('_cleaned.csv', '_stops.csv'))\n",
     "    stop.to_csv(outputfilename, index=False, encoding='utf-8-sig')\n",
     "    print(f\"站點資料輸出：{outputfilename}\")\n",
     "\n",
@@ -686,41 +670,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 預處理04: 確認資料各票種、各路線、平假日、起點、迄點筆數\n",
-    "files = findfiles(checkok_ticketfolder)\n",
-    "files = [f for f in files if 'TO1' in f]\n",
-    "df = read_combined_dataframe(files)\n",
-    "df['BoardingTime'] = pd.to_datetime(df['BoardingTime'], errors='coerce')\n",
-    "df['DeboardingTime'] = pd.to_datetime(df['DeboardingTime'], errors='coerce')\n",
-    "df['BoardinngDate'] = df['BoardingTime'].dt.date\n",
-    "df['DeboardingDate'] = df['DeboardingTime'].dt.date\n",
-    "df['BoardingHour'] = df['BoardingTime'].dt.hour\n",
-    "df['DeboardingHour'] = df['DeboardingTime'].dt.hour\n",
+    "# 分析01: 確認資料各票種、各路線、平假日、起點、迄點筆數\n",
     "\n",
-    "groupbycolumns = ['HolderType', \n",
-    "                  'RouteUID', 'RouteName', 'SubRouteUID', 'SubRouteName',\n",
-    "                  'BoardingStopUID', 'BoardingStopName', 'BoardingStopSequence', 'BoardinngDate', 'BoardingHour',\n",
-    "                  'DeboardingStopUID', 'DeboardingStopName', 'DeboardingStopSequence', 'DeboardingDate', 'DeboardingHour', 'FilePath']\n",
+    "def analysics01_hourlycount(checkok_ticketfolder, hourlycount_folder, returndf = True):\n",
     "\n",
-    "df[groupbycolumns] = df[groupbycolumns].fillna('-99')\n",
-    "df_count = df.groupby(groupbycolumns).size().reset_index(name='Count')\n",
+    "    files = findfiles(checkok_ticketfolder)\n",
+    "    files = [f for f in files if 'TO1' in f]\n",
+    "    df = read_combined_dataframe(files)\n",
+    "    df['BoardingTime'] = pd.to_datetime(df['BoardingTime'], errors='coerce')\n",
+    "    df['DeboardingTime'] = pd.to_datetime(df['DeboardingTime'], errors='coerce')\n",
+    "    df['BoardinngDate'] = df['BoardingTime'].dt.date\n",
+    "    df['DeboardingDate'] = df['DeboardingTime'].dt.date\n",
+    "    df['BoardingHour'] = df['BoardingTime'].dt.hour\n",
+    "    df['DeboardingHour'] = df['DeboardingTime'].dt.hour\n",
     "\n",
-    "df_count = pd.merge(df_count, \n",
-    "                    df_stopfromseq[['StopUID', 'PositionLon', 'PositionLat']].rename(columns = {'StopUID':'BoardingStopUID', 'PositionLon':'BoardingLon', 'PositionLat':'BoardingLat'}), \n",
-    "                    on = 'BoardingStopUID', \n",
-    "                    how='left')\n",
+    "    groupbycolumns = ['HolderType', \n",
+    "                    'RouteUID', 'RouteName', 'SubRouteUID', 'SubRouteName',\n",
+    "                    'BoardingStopUID', 'BoardingStopName', 'BoardingStopSequence', 'BoardinngDate', 'BoardingHour',\n",
+    "                    'DeboardingStopUID', 'DeboardingStopName', 'DeboardingStopSequence', 'DeboardingDate', 'DeboardingHour', 'FilePath']\n",
     "\n",
-    "df_count = pd.merge(df_count, \n",
-    "                    df_stopfromseq[['StopUID', 'PositionLon', 'PositionLat']].rename(columns = {'StopUID':'DeboardingStopUID', 'PositionLon':'DeboardingLon', 'PositionLat':'DeboardingLat'}), \n",
-    "                    on = 'DeboardingStopUID', \n",
-    "                    how='left')\n",
-    "df_count = df_count.reindex(columns= ['HolderType', 'RouteUID', 'RouteName', 'SubRouteUID', 'SubRouteName', \n",
-    "                                      'BoardingStopUID', 'BoardingStopName', 'BoardingStopSequence','BoardinngDate', 'BoardingHour', 'BoardingLon', 'BoardingLat', \n",
-    "                                      'DeboardingStopUID','DeboardingStopName', 'DeboardingStopSequence', 'DeboardingDate', 'DeboardingHour', 'DeboardingLon', 'DeboardingLat', \n",
-    "                                      'FilePath', 'Count'])\n",
+    "    df[groupbycolumns] = df[groupbycolumns].fillna('-99')\n",
+    "    df_count = df.groupby(groupbycolumns).size().reset_index(name='Count')\n",
     "\n",
-    "outputfile = os.path.join(firstcount_folder, '上下車區分票種分時計次.csv')\n",
-    "df_count.to_csv(outputfile, index=False)"
+    "    df_count = pd.merge(df_count, \n",
+    "                        df_stopfromseq[['StopUID', 'PositionLon', 'PositionLat']].rename(columns = {'StopUID':'BoardingStopUID', 'PositionLon':'BoardingLon', 'PositionLat':'BoardingLat'}), \n",
+    "                        on = 'BoardingStopUID', \n",
+    "                        how='left')\n",
+    "\n",
+    "    df_count = pd.merge(df_count, \n",
+    "                        df_stopfromseq[['StopUID', 'PositionLon', 'PositionLat']].rename(columns = {'StopUID':'DeboardingStopUID', 'PositionLon':'DeboardingLon', 'PositionLat':'DeboardingLat'}), \n",
+    "                        on = 'DeboardingStopUID', \n",
+    "                        how='left')\n",
+    "    df_count = df_count.reindex(columns= ['HolderType', 'RouteUID', 'RouteName', 'SubRouteUID', 'SubRouteName', \n",
+    "                                        'BoardingStopUID', 'BoardingStopName', 'BoardingStopSequence','BoardinngDate', 'BoardingHour', 'BoardingLon', 'BoardingLat', \n",
+    "                                        'DeboardingStopUID','DeboardingStopName', 'DeboardingStopSequence', 'DeboardingDate', 'DeboardingHour', 'DeboardingLon', 'DeboardingLat', \n",
+    "                                        'FilePath', 'Count'])\n",
+    "\n",
+    "    outputfile = os.path.join(hourlycount_folder, '上下車區分票種分時計次.csv')\n",
+    "    df_count.to_csv(outputfile, index=False)\n",
+    "\n",
+    "    if returndf:\n",
+    "        return df_count\n",
+    "\n",
+    "analysics01_hourlycount(checkok_ticketfolder, hourlycount_folder, returndf=False)"
    ]
   },
   {
@@ -730,7 +722,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 預處理 05 : 處理"
+    "# "
    ]
   }
  ],
