fix:把預處理03變成function 可直接呼叫

--- a/03_TicketAnalysisCode.ipynb
+++ b/03_TicketAnalysisCode.ipynb
@@ -615,52 +615,198 @@
     "\n",
     "        print(f\"清洗後資料輸出：{cleaned_output_path}\")\n",
     "\n",
-    "pre02_get_correct_tickets(selecttime_ticket_folder, checkok_ticketfolder)"
+    "# pre02_get_correct_tickets(selecttime_ticket_folder, checkok_ticketfolder)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "2f70d87d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_21996\\4002121206.py:9: DtypeWarning: Columns (7) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(file, encoding='utf-8-sig')\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_21996\\315726734.py:329: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  dfboarding[select_columns + boarding_stop_columns] = dfboarding[select_columns + boarding_stop_columns].fillna('-99')\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_21996\\315726734.py:331: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  dfboarding['OnorOff'] = 'On'\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_21996\\315726734.py:335: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  dfdeboarding[select_columns + deboarding_stop_columns] = dfdeboarding[select_columns+ deboarding_stop_columns].fillna('-99')\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_21996\\315726734.py:337: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  dfdeboarding['OnorOff'] = 'Off'\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "站點資料輸出：d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\TicketAnalysis\\01_初步篩選整理票證\\03_所有使用到的點位\\公路客運電子票證資料(TO1A)_2024-10-01_to_2024-11-30_stops.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_21996\\4002121206.py:9: DtypeWarning: Columns (32) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(file, encoding='utf-8-sig')\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_21996\\315726734.py:329: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  dfboarding[select_columns + boarding_stop_columns] = dfboarding[select_columns + boarding_stop_columns].fillna('-99')\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_21996\\315726734.py:331: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  dfboarding['OnorOff'] = 'On'\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_21996\\315726734.py:335: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  dfdeboarding[select_columns + deboarding_stop_columns] = dfdeboarding[select_columns+ deboarding_stop_columns].fillna('-99')\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_21996\\315726734.py:337: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  dfdeboarding['OnorOff'] = 'Off'\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "站點資料輸出：d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\TicketAnalysis\\01_初步篩選整理票證\\03_所有使用到的點位\\新北市公車電子票證資料(TO1A)_2024-10-01_to_2024-11-30_stops.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_21996\\315726734.py:329: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  dfboarding[select_columns + boarding_stop_columns] = dfboarding[select_columns + boarding_stop_columns].fillna('-99')\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_21996\\315726734.py:331: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  dfboarding['OnorOff'] = 'On'\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_21996\\315726734.py:335: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  dfdeboarding[select_columns + deboarding_stop_columns] = dfdeboarding[select_columns+ deboarding_stop_columns].fillna('-99')\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_21996\\315726734.py:337: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  dfdeboarding['OnorOff'] = 'Off'\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "站點資料輸出：d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\TicketAnalysis\\01_初步篩選整理票證\\03_所有使用到的點位\\桃園市公車電子票證資料(TO1A)_2024-10-01_to_2024-11-30_stops.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_21996\\315726734.py:44: DtypeWarning: Columns (3) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(file)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "第一次比對結果\n",
+      "總共有幾筆資料: 76,532,832\n",
+      "沒有對應經緯度座標的資料異常數量: 4,085,550\n",
+      "影響比例: 5.3383%\n",
+      "============================\n",
+      "第二次比對結果\n",
+      "第二次比對 - 總共有幾筆資料: 4,085,550\n",
+      "第二次比對 - 沒有對應經緯度座標的資料異常數量: 3,156,095\n",
+      "第二次比對 - 影響比例: 77.2502%\n",
+      "第二次比對 - 影響佔可用票證的原始比例: 4.1238%\n",
+      "============================\n"
+     ]
+    }
+   ],
    "source": [
     "# 預處理03: 確認所有站點的經緯度在TDX都可以被核對出來\n",
     "\n",
-    "files = findfiles(checkok_ticketfolder)\n",
-    "files = [f for f in files if 'TO1' in f]\n",
-    "for file in files:\n",
-    "    df = pd.read_csv(file, encoding='utf-8-sig')\n",
-    "    stop = get_stop_fromtickets(df)\n",
-    "    stop['file_source'] = os.path.basename(file)\n",
+    "def pre03_findstops(checkok_ticketfolder, \n",
+    "                    seqfolder = r\"D:\\B-Project\\2025\\6800\\Technical\\12票證資料\\TicketAnalysis\\00_TDX資料下載\\01公車站序資料\"):\n",
     "\n",
-    "    outputfilename = os.path.join(check_stopfolder, os.path.basename(file).replace('_cleaned.csv', '_stops.csv'))\n",
-    "    stop.to_csv(outputfilename, index=False, encoding='utf-8-sig')\n",
-    "    print(f\"站點資料輸出：{outputfilename}\")\n",
+    "    files = findfiles(checkok_ticketfolder)\n",
+    "    files = [f for f in files if 'TO1' in f]\n",
+    "    for file in files:\n",
+    "        df = pd.read_csv(file, encoding='utf-8-sig')\n",
+    "        stop = get_stop_fromtickets(df)\n",
+    "        stop['file_source'] = os.path.basename(file)\n",
     "\n",
-    "df_stop = read_combined_dataframe(findfiles(check_stopfolder, filetype='csv', recursive=False), filepath=False)\n",
+    "        outputfilename = os.path.join(check_stopfolder, os.path.basename(file).replace('_cleaned.csv', '_stops.csv'))\n",
+    "        stop.to_csv(outputfilename, index=False, encoding='utf-8-sig')\n",
+    "        print(f\"站點資料輸出：{outputfilename}\")\n",
     "\n",
-    "df_seq = read_combined_dataframe(findfiles(r\"D:\\B-Project\\2025\\6800\\Technical\\12票證資料\\TicketAnalysis\\00_TDX資料下載\\01公車站序資料\", \n",
-    "                                           filetype='csv', \n",
-    "                                           recursive=False), filepath=False)\n",
-    "df_stopfromseq = df_seq[['StopUID', 'StopName_Zh', 'PositionLon', 'PositionLat']].drop_duplicates(subset=['StopUID']).sort_values(['StopUID'])\n",
+    "    df_stop = read_combined_dataframe(findfiles(check_stopfolder, filetype='csv', recursive=False), filepath=False)\n",
     "\n",
-    "df_final, report_text = match_stop_coordinates(\n",
-    "    dfstop=df_stop.copy().rename(columns = {'StopName':'StopName_Zh'}),\n",
-    "    stop_gdf=df_stopfromseq,\n",
-    "    col_uid=\"StopUID\",\n",
-    "    col_name=\"StopName_Zh\",\n",
-    "    col_lat=\"PositionLat\",\n",
-    "    col_lon=\"PositionLon\"\n",
-    ")\n",
+    "    df_seq = read_combined_dataframe(findfiles(seqfolder, \n",
+    "                                            filetype='csv', \n",
+    "                                            recursive=False), filepath=False)\n",
+    "    df_stopfromseq = df_seq[['StopUID', 'StopName_Zh', 'PositionLon', 'PositionLat']].drop_duplicates(subset=['StopUID']).sort_values(['StopUID'])\n",
     "\n",
-    "print(report_text)\n",
+    "    df_final, report_text = match_stop_coordinates(\n",
+    "        dfstop=df_stop.copy().rename(columns = {'StopName':'StopName_Zh'}),\n",
+    "        stop_gdf=df_stopfromseq,\n",
+    "        col_uid=\"StopUID\",\n",
+    "        col_name=\"StopName_Zh\",\n",
+    "        col_lat=\"PositionLat\",\n",
+    "        col_lon=\"PositionLon\"\n",
+    "    )\n",
+    "\n",
+    "    print(report_text)\n",
     "\n",
     "\n",
     "\n",
-    "# a = df_final[((df_final['PositionLon'].isna()) | (df_final['PositionLat'].isna())) & (df_final['StopUID'] != \"-99\")][['StopUID', 'StopName_Zh']].drop_duplicates()\n",
-    "# a['Auth'] = a['StopUID'].str[:3]\n",
-    "# a.sort_values(['Auth'])"
+    "    # a = df_final[((df_final['PositionLon'].isna()) | (df_final['PositionLat'].isna())) & (df_final['StopUID'] != \"-99\")][['StopUID', 'StopName_Zh']].drop_duplicates()\n",
+    "    # a['Auth'] = a['StopUID'].str[:3]\n",
+    "    # a.sort_values(['Auth'])\n",
+    "\n",
+    "pre03_findstops(checkok_ticketfolder, seqfolder = r\"D:\\B-Project\\2025\\6800\\Technical\\12票證資料\\TicketAnalysis\\00_TDX資料下載\\01公車站序資料\")"
    ]
   },
   {
@@ -672,7 +818,10 @@
    "source": [
     "# 分析01: 確認資料各票種、各路線、平假日、起點、迄點筆數\n",
     "\n",
-    "def analysics01_hourlycount(checkok_ticketfolder, hourlycount_folder, returndf = True):\n",
+    "def analytics01_hourlycount(checkok_ticketfolder, \n",
+    "                            hourlycount_folder, \n",
+    "                            seqfolder = r\"D:\\B-Project\\2025\\6800\\Technical\\12票證資料\\TicketAnalysis\\00_TDX資料下載\\01公車站序資料\",\n",
+    "                            returndf = True):\n",
     "\n",
     "    files = findfiles(checkok_ticketfolder)\n",
     "    files = [f for f in files if 'TO1' in f]\n",
@@ -691,6 +840,11 @@
     "\n",
     "    df[groupbycolumns] = df[groupbycolumns].fillna('-99')\n",
     "    df_count = df.groupby(groupbycolumns).size().reset_index(name='Count')\n",
+    "\n",
+    "    df_seq = read_combined_dataframe(findfiles(seqfolder, \n",
+    "                                            filetype='csv', \n",
+    "                                            recursive=False), filepath=False)\n",
+    "    df_stopfromseq = df_seq[['StopUID', 'StopName_Zh', 'PositionLon', 'PositionLat']].drop_duplicates(subset=['StopUID']).sort_values(['StopUID'])\n",
     "\n",
     "    df_count = pd.merge(df_count, \n",
     "                        df_stopfromseq[['StopUID', 'PositionLon', 'PositionLat']].rename(columns = {'StopUID':'BoardingStopUID', 'PositionLon':'BoardingLon', 'PositionLat':'BoardingLat'}), \n",
@@ -712,7 +866,10 @@
     "    if returndf:\n",
     "        return df_count\n",
     "\n",
-    "analysics01_hourlycount(checkok_ticketfolder, hourlycount_folder, returndf=False)"
+    "analytics01_hourlycount(checkok_ticketfolder, \n",
+    "                        hourlycount_folder, \n",
+    "                        seqfolder = r\"D:\\B-Project\\2025\\6800\\Technical\\12票證資料\\TicketAnalysis\\00_TDX資料下載\\01公車站序資料\", \n",
+    "                        returndf=False)"
    ]
   },
   {
