fix:pre04 變成function

--- a/03_TicketAnalysisCode.ipynb
+++ b/03_TicketAnalysisCode.ipynb
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "id": "c1428724",
    "metadata": {},
    "outputs": [],
@@ -459,6 +459,8 @@
     "selecttime_ticket_folder = create_folder(os.path.join(os.getcwd(), '..', '01_初步篩選整理票證', '01_指定時間區間票證資料')) # 建立01-01 指定時間區間票證資料夾\n",
     "checkok_ticketfolder = create_folder(os.path.join(os.getcwd(), '..', '01_初步篩選整理票證', '02_過濾可用票證資料')) # 建立01-02 過濾可用票證資料夾\n",
     "check_stopfolder = create_folder(os.path.join(os.getcwd(), '..', '01_初步篩選整理票證', '03_所有使用到的點位')) # 建立01-03 所有使用到的點位資料夾\n",
+    "reformat_folder = create_folder(os.path.join(os.getcwd(), '..', '01_初步篩選整理票證', '04_計算交通量格式')) # 建立01-03 所有使用到的點位資料夾\n",
+    "\n",
     "hourlycount_folder = create_folder(os.path.join(os.getcwd(), '..', '02_初步分析', '01_分時計次')) # 建立01-03 所有使用到的點位資料夾\n",
     "dailybetweenstops_folder = create_folder(os.path.join(os.getcwd(), '..', '02_初步分析', '02_全日站間量'))\n"
    ]
@@ -499,43 +501,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # 額外處理 -> 為了找到是否有問題的\n",
-    "# marked_ticketfolder = create_folder(\n",
-    "#     os.path.join(os.getcwd(), '..', '01_初步篩選整理票證', '01-01_指定時間區間票證資料_但有錯誤標記')\n",
-    "# )\n",
+    "# 額外處理 -> 為了找到是否有問題的\n",
+    "marked_ticketfolder = create_folder(\n",
+    "    os.path.join(os.getcwd(), '..', '01_初步篩選整理票證', '01-01_指定時間區間票證資料_但有錯誤標記')\n",
+    ")\n",
     "\n",
-    "# selecttime_ticket_files = findfiles(selecttime_ticket_folder, filetype='.csv', recursive=False)\n",
-    "# selecttime_ticket_files = [f for f in selecttime_ticket_files if 'TO1' in f]\n",
+    "selecttime_ticket_files = findfiles(selecttime_ticket_folder, filetype='.csv', recursive=False)\n",
+    "selecttime_ticket_files = [f for f in selecttime_ticket_files if 'TO1' in f]\n",
     "\n",
-    "# for file in selecttime_ticket_files:\n",
-    "#     marked_output_file = os.path.join(\n",
-    "#         marked_ticketfolder,\n",
-    "#         os.path.basename(file).replace(\".csv\", \"_marked.csv\")\n",
-    "#     )\n",
+    "for file in selecttime_ticket_files:\n",
+    "    marked_output_file = os.path.join(\n",
+    "        marked_ticketfolder,\n",
+    "        os.path.basename(file).replace(\".csv\", \"_marked.csv\")\n",
+    "    )\n",
     "\n",
-    "#     # 如果 mark_ticket_errors 需要全表上下文，改成 chunksize=None\n",
-    "#     reader = pd.read_csv(file, chunksize=1000)\n",
+    "    # 如果 mark_ticket_errors 需要全表上下文，改成 chunksize=None\n",
+    "    reader = pd.read_csv(file, chunksize=1000)\n",
     "\n",
-    "#     first_chunk = True\n",
-    "#     for chunk in reader:\n",
-    "#         output = mark_ticket_errors(\n",
-    "#             tickets=chunk, \n",
-    "#             on_time_column='BoardingTime',\n",
-    "#             off_time_column='DeboardingTime',\n",
-    "#             getonstop='BoardingStopUID',\n",
-    "#             getoffstop='DeboardingStopUID',\n",
-    "#             getonseq='BoardingStopSequence',\n",
-    "#             getoffseq='DeboardingStopSequence'\n",
-    "#         )\n",
+    "    first_chunk = True\n",
+    "    for chunk in reader:\n",
+    "        output = mark_ticket_errors(\n",
+    "            tickets=chunk, \n",
+    "            on_time_column='BoardingTime',\n",
+    "            off_time_column='DeboardingTime',\n",
+    "            getonstop='BoardingStopUID',\n",
+    "            getoffstop='DeboardingStopUID',\n",
+    "            getonseq='BoardingStopSequence',\n",
+    "            getoffseq='DeboardingStopSequence'\n",
+    "        )\n",
     "\n",
-    "#         output.to_csv(\n",
-    "#             marked_output_file,\n",
-    "#             mode='w' if first_chunk else 'a',\n",
-    "#             header=first_chunk,\n",
-    "#             index=False,\n",
-    "#             encoding='utf-8-sig'\n",
-    "#         )\n",
-    "#         first_chunk = False  \n"
+    "        output.to_csv(\n",
+    "            marked_output_file,\n",
+    "            mode='w' if first_chunk else 'a',\n",
+    "            header=first_chunk,\n",
+    "            index=False,\n",
+    "            encoding='utf-8-sig'\n",
+    "        )\n",
+    "        first_chunk = False  \n"
    ]
   },
   {
@@ -670,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "daecf5a5",
    "metadata": {},
    "outputs": [],
@@ -748,7 +750,41 @@
     "                    'InfoDate', 'DaysofWeek', 'WDWK']\n",
     "\n",
     "    df = df.reindex(columns=reindexcolumns)\n",
-    "    return df \n"
+    "    return df \n",
+    "\n",
+    "def pre04_reformat(checkok_ticketfolder, reformat_folder):\n",
+    "\n",
+    "    filelist = findfiles(checkok_ticketfolder, filetype='csv', recursive=False)\n",
+    "\n",
+    "    for file in filelist:\n",
+    "\n",
+    "        reformat_output_file = os.path.join(\n",
+    "            reformat_folder,\n",
+    "            os.path.basename(file).replace(\"_cleaned.csv\", \"_reformatted.csv\")\n",
+    "        )\n",
+    "\n",
+    "\n",
+    "        # 如果 mark_ticket_errors 需要全表上下文，改成 chunksize=None\n",
+    "        reader = pd.read_csv(file, chunksize=1000)\n",
+    "\n",
+    "        first_chunk = True\n",
+    "        for chunk in reader:\n",
+    "\n",
+    "            output = add_weekdayandweekendcolumns(df=chunk,\n",
+    "                                            timecolumns= 'InfoDate', \n",
+    "                                            filterdate= ['2024-10-09', '2024-10-10', '2024-10-11', '2024-10-12', '2024-10-13', '2024-10-14', '2024-10-15'])\n",
+    "            output = must_outputformat(output)\n",
+    "\n",
+    "            output.to_csv(\n",
+    "                reformat_output_file,\n",
+    "                mode='w' if first_chunk else 'a',\n",
+    "                header=first_chunk,\n",
+    "                index=False,\n",
+    "                encoding='utf-8-sig'\n",
+    "            )\n",
+    "            first_chunk = False  \n",
+    "\n",
+    "pre04_reformat(checkok_ticketfolder, reformat_folder)"
    ]
   },
   {
@@ -758,13 +794,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filelist = findfiles()\n",
+    "filelist = findfiles(checkok_ticketfolder, filetype='csv', recursive=False)\n",
     "\n",
-    "df = add_weekdayandweekendcolumns(df=df,\n",
-    "                                  timecolumns= 'InfoDate', \n",
-    "                                  filterdate= ['2024-10-09', '2024-10-10', '2024-10-11', '2024-10-12', '2024-10-13', '2024-10-14', '2024-10-15'])\n",
-    "df = must_outputformat(df)\n",
-    "\n"
+    "for file in filelist:\n",
+    "\n",
+    "    reformat_output_file = os.path.join(\n",
+    "        reformat_folder,\n",
+    "        os.path.basename(file).replace(\"_cleaned.csv\", \"_reformatted.csv\")\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "    # 如果 mark_ticket_errors 需要全表上下文，改成 chunksize=None\n",
+    "    reader = pd.read_csv(file, chunksize=1000)\n",
+    "\n",
+    "    first_chunk = True\n",
+    "    for chunk in reader:\n",
+    "\n",
+    "        output = add_weekdayandweekendcolumns(df=chunk,\n",
+    "                                        timecolumns= 'InfoDate', \n",
+    "                                        filterdate= ['2024-10-09', '2024-10-10', '2024-10-11', '2024-10-12', '2024-10-13', '2024-10-14', '2024-10-15'])\n",
+    "        output = must_outputformat(output)\n",
+    "\n",
+    "        output.to_csv(\n",
+    "            reformat_output_file,\n",
+    "            mode='w' if first_chunk else 'a',\n",
+    "            header=first_chunk,\n",
+    "            index=False,\n",
+    "            encoding='utf-8-sig'\n",
+    "        )\n",
+    "        first_chunk = False  "
    ]
   },
   {
